[project]
name = "hf-model-dep-network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=0.32.5",
    "matplotlib>=3.10.3",
    "netgraph>=4.13.2",
    "networkx>=3.5",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pyvis>=0.3.2",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]
